--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
 	background: #ADD8E6;
 	height:150%;
 }
+#wrap-content {
+  font-family: 'Poppins', sans-serif;
+}
 
 p{ font-size: 1.3em; }
 
