--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ nav {
 #footer-wrap{
 	height: 50px;	
 	background: #d3cfca;
-	background: url('../images/footer.jpg') repeat-x;
+	background: url('../images/header.jpg') repeat-x;
 	border-top: 1px solid #ccc;
 	box-shadow: 0px 0px 3px 2px rgba( 224, 224, 224, 0.5 );
 	-o-box-shadow: 0px 0px 3px 2px rgba( 224, 224, 224, 0.5 );
@@ -307,8 +307,8 @@ nav {
 		padding-top: 16px;
 	}
 		#footer p{
-			color: #282e4e;
-			text-shadow: 1px 1px #eee;
+			color: #ffffff;
+			text-shadow: 1px 1px #000000;
 			font-size: 1.2em;
 		}
 
